Move next/prev buttons to top to avoid jumping around

--- a/app/assets/stylesheets/stories.scss
+++ b/app/assets/stylesheets/stories.scss
@@ -122,12 +122,10 @@
   display: flex;
   flex-grow: 1;
   justify-content: flex-start;
-  align-items: center;
 }
 
 #story-next-div {
   display: flex;
   flex-grow: 1;
   justify-content: flex-end;
-  align-items: center;
 }
